<resources>
    <string name="app_name">Language Translator</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="british_english">British English</string>
    <string name="german">German</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="italy">Italy</string>
    <string name="chinese">Chinese</string>
    <string name="japanese">Japanese</string>
    <string name="korean">Korean</string>
    <string name="aus_english">Aus English</string>
    <string name="portuguese">Portuguese</string>
    <string name="russian">Russian</string>
    <string name="danish">Danish</string>
    <string name="dutch">Dutch</string>
    <string name="bengali">Bengali</string>
    <string name="hungarian">Hungarian</string>
    <string name="turkish">Turkish</string>
    <string name="swedish">Swedish</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="czech">Czech</string>
    <string name="thai">Thai</string>
    <string name="italian">Italian</string>
    <string name="indonesian">Indonesian</string>
    <string name="greek">Greek</string>
    <string name="menu">Menu</string>
</resources>
