<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_recyclerView"
        android:icon="@drawable/india_small"
        android:orderInCategory="100"
        android:title="@string/hindi"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/usa_small"
        android:orderInCategory="100"
        android:title="@string/english"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/england_small"
        android:orderInCategory="100"
        android:title="@string/british_english"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/germany_small"
        android:orderInCategory="100"
        android:title="@string/german"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/france_small"
        android:orderInCategory="100"
        android:title="@string/french"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/spain_small"
        android:orderInCategory="100"
        android:title="@string/spanish"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/italy_small"
        android:orderInCategory="100"
        android:title="@string/italian"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/china_small"
        android:orderInCategory="100"
        android:title="@string/chinese"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/japan_small"
        android:orderInCategory="100"
        android:title="@string/japanese"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/korea_small"
        android:orderInCategory="100"
        android:title="@string/korean"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/australia_small"
        android:orderInCategory="100"
        android:title="@string/aus_english"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/portugal_small"
        android:orderInCategory="100"
        android:title="@string/portuguese"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/russia_small"
        android:orderInCategory="100"
        android:title="@string/russian"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/denmark_small"
        android:orderInCategory="100"
        android:title="@string/danish"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/netherlands_small"
        android:orderInCategory="100"
        android:title="@string/dutch"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/indonesia_small"
        android:orderInCategory="100"
        android:title="@string/indonesian"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/greece_small"
        android:orderInCategory="100"
        android:title="@string/greek"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/bangladesh_small"
        android:orderInCategory="100"
        android:title="@string/bengali"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/hungary_small"
        android:orderInCategory="100"
        android:title="@string/hungarian"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/turkey_small"
        android:orderInCategory="100"
        android:title="@string/turkish"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/sweden_small"
        android:orderInCategory="100"
        android:title="@string/swedish"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/vietnam_small"
        android:orderInCategory="100"
        android:title="@string/vietnamese"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/czech_small"
        android:orderInCategory="100"
        android:title="@string/czech"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/thailand_small"
        android:orderInCategory="100"
        android:title="@string/thai"
        app:showAsAction="always"/>
</menu>